[package]
name = "sync-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel-async = { path = "../../", features = ["sync-connection-wrapper", "async-connection-wrapper"] }
futures-util = "0.3.21"
tokio = { version = "1.2.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[dependencies.diesel]
version = "2.2.0"
default-features = false
features = ["returning_clauses_for_sqlite_3_35"]
git = "https://github.com/stormshield-kg/diesel"
rev = "d39957995a3c247c4524c2ce9c6f2268d6a6f8c1"

[dependencies.diesel_migrations]
version = "2.2.0"
git = "https://github.com/stormshield-kg/diesel"
rev = "d39957995a3c247c4524c2ce9c6f2268d6a6f8c1"

[features]
default = ["sqlite"]
sqlite = ["diesel-async/sqlite"]
