[package]
name = "pooled-with-rustls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel-async = { path = "../../../", features = ["bb8", "postgres"] }
futures-util = "0.3.21"
rustls = "0.23.8"
rustls-platform-verifier = "0.5.0"
tokio = { version = "1.2.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.7"
tokio-postgres-rustls = "0.13.0"


[dependencies.diesel]
version = "2.2.0"
default-features = false
git = "https://github.com/stormshield-kg/diesel"
rev = "d39957995a3c247c4524c2ce9c6f2268d6a6f8c1"
